# resume

./: .gitignore  .prettierignore  .prettierrc.js  LICENSE  README.md  config.toml  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  uno.config.ts
.github/workflows/: build.yaml  publish-pages.yml
content/en/: data.toml
content/zh/: data.toml
data/zh/: main.toml
public/: CNAME
public/css/: custom.css
renderer/: __init__.py  _core.py
static/: app.css  main.css
templates/: index.html  main.html  page.html
