[tool.poetry]
name = "resume"
version = "0.1.0"
description = "Resume of Yishi Gao"
authors = ["st1020 <stone_1020@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "renderer" }]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
marko = "^2.0"
requests = "^2"

[tool.poetry.group.dev.dependencies]
pytailwindcss = "^0.2"
livereload = "^2.6"
black = "^23"

[tool.poetry.scripts]
build = "renderer:build"
dev = "renderer:livereload"

[tool.black]
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
