[project]
name = "resume"
version = "0.1.0"
description = "Resume of Yishi Gao"
authors = [{ name = "st1020", email = "stone_1020@qq.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = ["jinja2>=3.1.2", "marko>=2.0", "requests>=2"]
requires-python = ">=3.11"

[tool.pdm.dev-dependencies]
dev = ["pytailwindcss>=0.2", "livereload>=2.6"]
lint = ["black", "ruff"]

[tool.pdm.scripts]
build = { call = "renderer:build" }
dev = { call = "renderer:livereload" }

[tool.black]
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["ALL"]
ignore = [
    "D",       # pydocstyle
    "S",       # flake8-bandit
    "FBT",     # flake8-boolean-trap
    "COM",     # flake8-commas
    "T20",     # flake8-print
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "PGH003",  # Use specific rule codes when ignoring type issues
    "PLR2004", # Magic value used in comparison
]
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
